--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "author": "matus-dev <dudic.matus@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^25.2.1",
+    "jest": "^25.2.7",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.0.2",
+    "pretty-quick": "^2.0.1",
+    "ts-jest": "^25.3.1",
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
