--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "license": "MIT",
   "dependencies": {
     "@types/bluebird": "^3.5.30",
+    "@types/commander": "^2.12.2",
     "@types/jest": "^25.2.1",
     "@types/line-reader": "^0.0.28",
+    "@types/lodash": "^4.14.149",
+    "commander": "^5.0.0",
     "jest": "^25.2.7",
     "line-reader": "^0.4.0",
+    "lodash": "^4.17.15",
     "ts-node": "^8.8.1",
     "typescript": "^3.8.3"
   },
